United Provinces added to the Map
The Netherlands were reused to form the European territory of the United Provinces.

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1,4 +1,22 @@
 ﻿l_english:
+HOL_fascism:0 "Dutch Rijk"
+ HOL_fascism_DEF:0 "Dutch Rijk"
+ HOL_democratic:0 "United Provinces"
+ HOL_democratic_DEF:0 "the United Provinces"
+ HOL_neutrality:0 "Kingdom of Netherlands"
+ HOL_neutrality_DEF:0 "the Kingdom of Netherlands"
+ HOL_communism:0 "People's United Provinces"
+ HOL_communism_DEF:0 "the People's United Provinces"
+ HOL_fascism_ADJ:0 "Dutch"
+ HOL_democratic_ADJ:0 "Dutch"
+ HOL_neutrality_ADJ:0 "Dutch"
+ HOL_communism_ADJ:0 "Dutch"
+ HOL:0 "Netherlands"
+ HOL_DEF:0 "the Netherlands"
+ HOL_ADJ:0 "Dutch"
+ HOL_subject:0 "$OVERLORDADJ$ $HOL$"
+ HOL_subject_DEF:0 "$OVERLORDADJ$ $HOL$"
+
  GER_fascism:0 "German Reich"
  GER_fascism_DEF:0 "the German Reich"
  GER_democratic:0 "German Republic"
@@ -173,23 +191,6 @@
  BEL_ADJ:0 "Belgian"
  BEL_subject:0 "$OVERLORDADJ$ $BEL$"
  BEL_subject_DEF:0 "$OVERLORDADJ$ $BEL$"
- HOL_fascism:0 "Dutch Rijk"
- HOL_fascism_DEF:0 "Dutch Rijk"
- HOL_democratic:0 "Netherlands"
- HOL_democratic_DEF:0 "the Netherlands"
- HOL_neutrality:0 "Kingdom of Netherlands"
- HOL_neutrality_DEF:0 "the Kingdom of Netherlands"
- HOL_communism:0 "People's United Provinces"
- HOL_communism_DEF:0 "the People's United Provinces"
- HOL_fascism_ADJ:0 "Dutch"
- HOL_democratic_ADJ:0 "Dutch"
- HOL_neutrality_ADJ:0 "Dutch"
- HOL_communism_ADJ:0 "Dutch"
- HOL:0 "Netherlands"
- HOL_DEF:0 "the Netherlands"
- HOL_ADJ:0 "Dutch"
- HOL_subject:0 "$OVERLORDADJ$ $HOL$"
- HOL_subject_DEF:0 "$OVERLORDADJ$ $HOL$"
  HOL_FRA_democratic_subject:0 "Batavian Republic"
  HOL_FRA_democratic_subject_DEF:0 "the Batavian Republic"
  CZE_fascism:0 "Bohemian Empire"
