--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -16,6 +16,15 @@ HOL_fascism:0 "Dutch Rijk"
  HOL_ADJ:0 "Dutch"
  HOL_subject:0 "$OVERLORDADJ$ $HOL$"
  HOL_subject_DEF:0 "$OVERLORDADJ$ $HOL$"
+ BRI_fascism:0 "National Republic of Brittany"
+ BRI_fascism_DEF:0 "the National Republic of Brittany"
+ BRI_democratic:0 "Breton Free Republic"
+ BRI_democratic_DEF:0 "the Breton Free Republic"
+ BRI_communism:0 "Socialist State of Brittany"
+ BRI_communism_DEF:0 "the Socialist State of Brittany"
+ BRI:0 "Bretagne"
+ BRI_DEF:0 "Bretagne"
+ BRI_ADJ:0 "Breton"
 
  GER_fascism:0 "German Reich"
  GER_fascism_DEF:0 "the German Reich"
@@ -3248,15 +3257,6 @@ HOL_fascism:0 "Dutch Rijk"
  SHL:0 "Schleswig"
  SHL_DEF:0 "Schleswig"
  SHL_ADJ:0 "Schleswig"
- BRI_fascism:0 "National Republic of Brittany"
- BRI_fascism_DEF:0 "the National Republic of Brittany"
- BRI_democratic:0 "Breton Free Republic"
- BRI_democratic_DEF:0 "the Breton Free Republic"
- BRI_communism:0 "Socialist State of Brittany"
- BRI_communism_DEF:0 "the Socialist State of Brittany"
- BRI:0 "Brittany"
- BRI_DEF:0 "Brittany"
- BRI_ADJ:0 "Breton"
  OCC_fascism:0 "Imperialist Occitania"
  OCC_fascism_DEF:0 "Imperialist Occitania"
  OCC_democratic:0 "Occitania"
