--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -25,6 +25,17 @@
  BRI:0 "Bretagne"
  BRI_DEF:0 "Bretagne"
  BRI_ADJ:0 "Breton"
+ OCC_fascism:0 "Imperialist Occitania"
+ OCC_fascism_DEF:0 "Imperialist Occitania"
+ OCC_democratic:0 "Aquitaine"
+ OCC_democratic_DEF:0 "the Occitan Republic"
+ OCC_communism:0 "Worker's Commune of Occitania"
+ OCC_communism_DEF:0 "the Worker's Commune of Occitania"
+ OCC_neutrality:0 "Kingdom of Aquitaine"
+ OCC_neutrality_DEF:0 "the Kingdom of Aquitaine"
+ OCC:0 "Occitania"
+ OCC_DEF:0 "Occitania"
+ OCC_ADJ:0 "Occitan"
 
  ADA:0 "Granada"
 
@@ -3270,17 +3281,6 @@
  SHL:0 "Schleswig"
  SHL_DEF:0 "Schleswig"
  SHL_ADJ:0 "Schleswig"
- OCC_fascism:0 "Imperialist Occitania"
- OCC_fascism_DEF:0 "Imperialist Occitania"
- OCC_democratic:0 "Occitania"
- OCC_democratic_DEF:0 "the Occitan Republic"
- OCC_communism:0 "Worker's Commune of Occitania"
- OCC_communism_DEF:0 "the Worker's Commune of Occitania"
- OCC_neutrality:0 "Kingdom of Aquitaine"
- OCC_neutrality_DEF:0 "the Kingdom of Aquitaine"
- OCC:0 "Occitania"
- OCC_DEF:0 "Occitania"
- OCC_ADJ:0 "Occitan"
  OCC_FRA_subject:0 "Autonomous Region of Southern France"
  OCC_FRA_subject_DEF:0 "the Autonomous Region of Southern France"
  OCC_FRA_subject_ADJ:1 "Southern French"
