Added Several Nations.
Added several nations to Europe.

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -36,6 +36,57 @@
  OCC:0 "Occitania"
  OCC_DEF:0 "Occitania"
  OCC_ADJ:0 "Occitan"
+SCO_fascism:1 "Caledonia"
+ SCO_fascism_DEF:1 "Caledonia"
+ SCO_democratic:0 "Scotland"
+ SCO_democratic_DEF:0 "Scotland"
+ SCO_neutrality:1 "Kingdom of Scotland"
+ SCO_neutrality_DEF:1 "the Kingdom of Scotland"
+ SCO_communism:1 "Commonwealth of Alba"
+ SCO_communism_DEF:1 "the Commonwealth of Alba"
+ SCO_fascism_ADJ:1 "Caledonian"
+ SCO_democratic_ADJ:0 "Scottish"
+ SCO_neutrality_ADJ:0 "Scottish"
+ SCO_communism_ADJ:1 "Alban"
+ SCO:0 "Scotland"
+ SCO_DEF:0 "Scotland"
+ SCO_ADJ:0 "Scottish"
+CZE_fascism:0 "Bohemian Empire"
+ CZE_fascism_DEF:0 "the Bohemian Empire"
+ CZE_democratic:0 "Imperial State of Bohemia"
+ CZE_democratic_DEF: "the Imperial State of Bohemia"
+ CZE_neutrality:0 "Kingdom of Bohemia"
+ CZE_neutrality_DEF:0 "the Kingdom of Bohemia"
+ CZE_communism:0 "Czechoslovak Union"
+ CZE_communism_DEF:0 "the Czechoslovak Union"
+ CZE_fascism_ADJ:0 "Czechoslovakian"
+ CZE_democratic_ADJ:0 "Czechoslovakian"
+ CZE_neutrality_ADJ:0 "Czechoslovakian"
+ CZE_communism_ADJ:0 "Czechoslovakian"
+ CZE:0 "Bohemia"
+ CZE_DEF:0 "Bohemia"
+ CZE_ADJ:0 "Bohemian"
+ CZE_subject:0 "$OVERLORDADJ$ $CZE$"
+ CZE_subject_DEF:0 "$OVERLORDADJ$ $CZE$"
+SWI_fascism:1 "Imperial Helvetia"
+ SWI_fascism_DEF:1 "the Imperial Helvetic Confederation"
+ SWI_democratic:0 "Switzerland"
+ SWI_democratic_DEF:1 "the Swiss Confederation"
+ SWI_neutrality:1 "Helvetic Junta"
+ SWI_neutrality_DEF:1 "The Helvetic Junta"
+ SWI_communism:0 "United Cantons"
+ SWI_communism_DEF:0 "the United Cantons"
+ SWI_fascism_ADJ:1 "Helvetic"
+ SWI_democratic_ADJ:0 "Swiss"
+ SWI_neutrality_ADJ:1 "Helvetic"
+ SWI_communism_ADJ:0 "Swiss"
+ SWI_fascism_subject:0 "$OVERLORDADJ$ Alpine Territories"
+ SWI_fascism_subject_DEF:0 "the $OVERLORDADJ$ Alpine Territories"
+ SWI_democratic_subject:0 "$OVERLORDADJ$ Helvetia"
+ SWI_democratic_subject_DEF:0 "Helvetic"
+ SWI:0 "Switzerland"
+ SWI_DEF:0 "Switzerland"
+ SWI_ADJ:0 "Swiss"
 
  GER_fascism:0 "German Reich"
  GER_fascism_DEF:0 "the German Reich"
@@ -213,23 +264,6 @@
  BEL_subject_DEF:0 "$OVERLORDADJ$ $BEL$"
  HOL_FRA_democratic_subject:0 "Batavian Republic"
  HOL_FRA_democratic_subject_DEF:0 "the Batavian Republic"
- CZE_fascism:0 "Bohemian Empire"
- CZE_fascism_DEF:0 "the Bohemian Empire"
- CZE_democratic:0 "Czechoslovakia"
- CZE_democratic_DEF: "the Czechoslovak Republic"
- CZE_neutrality:0 "Kingdom of Bohemia"
- CZE_neutrality_DEF:0 "the Kingdom of Bohemia"
- CZE_communism:0 "Czechoslovak Union"
- CZE_communism_DEF:0 "the Czechoslovak Union"
- CZE_fascism_ADJ:0 "Czechoslovakian"
- CZE_democratic_ADJ:0 "Czechoslovakian"
- CZE_neutrality_ADJ:0 "Czechoslovakian"
- CZE_communism_ADJ:0 "Czechoslovakian"
- CZE:0 "Czechoslovakia"
- CZE_DEF:0 "Czechoslovakia"
- CZE_ADJ:0 "Czechoslovakian"
- CZE_subject:0 "$OVERLORDADJ$ $CZE$"
- CZE_subject_DEF:0 "$OVERLORDADJ$ $CZE$"
  POL_fascism:0 "Falangist Poland"
  POL_fascism_DEF:0 "Falangist Poland"
  POL_democratic:0 "Polish Republic"
@@ -397,25 +431,6 @@
  YUG_ADJ:0 "Yugoslavian"
  YUG_subject:0 "$OVERLORDADJ$ $YUG$"
  YUG_subject_DEF:0 "$OVERLORDADJ$ $YUG$"
- SWI_fascism:1 "Imperial Helvetia"
- SWI_fascism_DEF:1 "the Imperial Helvetic Confederation"
- SWI_democratic:0 "Switzerland"
- SWI_democratic_DEF:1 "the Swiss Confederation"
- SWI_neutrality:1 "Helvetic Junta"
- SWI_neutrality_DEF:1 "The Helvetic Junta"
- SWI_communism:0 "United Cantons"
- SWI_communism_DEF:0 "the United Cantons"
- SWI_fascism_ADJ:1 "Helvetic"
- SWI_democratic_ADJ:0 "Swiss"
- SWI_neutrality_ADJ:1 "Helvetic"
- SWI_communism_ADJ:0 "Swiss"
- SWI_fascism_subject:0 "$OVERLORDADJ$ Alpine Territories"
- SWI_fascism_subject_DEF:0 "the $OVERLORDADJ$ Alpine Territories"
- SWI_democratic_subject:0 "$OVERLORDADJ$ Helvetia"
- SWI_democratic_subject_DEF:0 "Helvetic"
- SWI:0 "Switzerland"
- SWI_DEF:0 "Switzerland"
- SWI_ADJ:0 "Swiss"
  TUR_fascism:1 "Turkish Empire"
  TUR_fascism_DEF:1 "the Turkish Empire"
  TUR_democratic:0 "Republic of Turkey"
@@ -2087,21 +2102,6 @@
  QAT:0 "Qatar"
  QAT_DEF:0 "Qatar"
  QAT_ADJ:0 "Qatari"
- SCO_fascism:1 "Caledonia"
- SCO_fascism_DEF:1 "Caledonia"
- SCO_democratic:0 "Scotland"
- SCO_democratic_DEF:0 "Scotland"
- SCO_neutrality:1 "Kingdom of Scotland"
- SCO_neutrality_DEF:1 "the Kingdom of Scotland"
- SCO_communism:1 "Commonwealth of Alba"
- SCO_communism_DEF:1 "the Commonwealth of Alba"
- SCO_fascism_ADJ:1 "Caledonian"
- SCO_democratic_ADJ:0 "Scottish"
- SCO_neutrality_ADJ:0 "Scottish"
- SCO_communism_ADJ:1 "Alban"
- SCO:0 "Scotland"
- SCO_DEF:0 "Scotland"
- SCO_ADJ:0 "Scottish"
  SRL_fascism:1 "Nationalist Ceylon"
  SRL_fascism_DEF:1 "Nationalist Ceylon"
  SRL_democratic:1 "Democratic Socialist Republic of Sri Lanka"
