--- a/localisation/english/Country Specific/granada_l_english.yml
+++ b/localisation/english/Country Specific/granada_l_english.yml
@@ -3,8 +3,8 @@
  ADA_fascism_DEF:0 "The Unitary State of Gran Colombia"
  ADA_democratic:0 "Colombia"
  ADA_democratic_DEF:0 "the Republic of Colombia"
- ADA_neutrality:0 "Grand Duchy of Grenada"
- ADA_neutrality_DEF:0 "the Grand Duchy of Grenada"
+ ADA_neutrality:0 "Viceroyalty of Grenada"
+ ADA_neutrality_DEF:0 "the Viceroyalty of Grenada"
  ADA_communism:0 "People's Republic of Granada"
  ADA_communism_DEF:0 "the People's Republic of Granada"
  ADA_fascism_ADJ:0 "Grenadan"
