Added more nations in Europe
Added the HRE, Genoa-Savoy, and Saxony, along with renaming France, Germany, and Switzerland.

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -70,26 +70,26 @@ CZE_fascism:0 "Bohemian Empire"
  CZE_subject_DEF:0 "$OVERLORDADJ$ $CZE$"
 SWI_fascism:1 "Imperial Helvetia"
  SWI_fascism_DEF:1 "the Imperial Helvetic Confederation"
- SWI_democratic:0 "Switzerland"
- SWI_democratic_DEF:1 "the Swiss Confederation"
+ SWI_democratic:0 "Helvetic Kingdom"
+ SWI_democratic_DEF:1 "the Helvetic Kingdom"
  SWI_neutrality:1 "Helvetic Junta"
  SWI_neutrality_DEF:1 "The Helvetic Junta"
  SWI_communism:0 "United Cantons"
  SWI_communism_DEF:0 "the United Cantons"
  SWI_fascism_ADJ:1 "Helvetic"
- SWI_democratic_ADJ:0 "Swiss"
+ SWI_democratic_ADJ:0 "Helvetic"
  SWI_neutrality_ADJ:1 "Helvetic"
  SWI_communism_ADJ:0 "Swiss"
  SWI_fascism_subject:0 "$OVERLORDADJ$ Alpine Territories"
  SWI_fascism_subject_DEF:0 "the $OVERLORDADJ$ Alpine Territories"
  SWI_democratic_subject:0 "$OVERLORDADJ$ Helvetia"
  SWI_democratic_subject_DEF:0 "Helvetic"
- SWI:0 "Switzerland"
- SWI_DEF:0 "Switzerland"
- SWI_ADJ:0 "Swiss"
+ SWI:0 "Helvetic"
+ SWI_DEF:0 "Helvetic"
+ SWI_ADJ:0 "Helvet"
 
- GER_fascism:0 "German Reich"
- GER_fascism_DEF:0 "the German Reich"
+ GER_fascism:0 "Tysk Realm"
+ GER_fascism_DEF:0 "the Tysk Realm"
  GER_democratic:0 "German Republic"
  GER_democratic_DEF:0 "the German Republic"
  GER_neutrality:1 "German Empire"
@@ -107,9 +107,9 @@ SWI_fascism:1 "Imperial Helvetia"
  GER_SOV_communism_autonomy_puppet:0 "$OVERLORDADJ$ Occupation Zone of Germany"
  GER_SOV_communism_autonomy_puppet_DEF:0 "the $OVERLORDADJ$ Occupation Zone of Germany"
  GER_SOV_communism_autonomy_puppet_ADJ:0 "$OVERLORDADJ$ German"
- GER:0 "Germany"
- GER_DEF:0 "Germany"
- GER_ADJ:0 "German"
+ GER:0 "Tysk"
+ GER_DEF:0 "Tysk"
+ GER_ADJ:0 "Tyskan"
  ENG_fascism:0 "British Empire"
  ENG_fascism_DEF:0 "the British Empire"
  ENG_democratic:0 "United Kingdom"
@@ -212,8 +212,8 @@ SWI_fascism:1 "Imperial Helvetia"
  SWE_subject_DEF:0 "$OVERLORDADJ$ $SWE$"
  FRA_fascism:2 "Nation Française"
  FRA_fascism_DEF:2 "Nation Française"
- FRA_democratic:0 "France"
- FRA_democratic_DEF:0 "France"
+ FRA_democratic:0 "France-Propre"
+ FRA_democratic_DEF:0 "France-Propre"
  FRA_neutrality:0 "Bourbon France"
  FRA_neutrality_DEF:0 "Bourbon France"
  FRA_communism:0 "French Commune"
@@ -242,6 +242,21 @@ SWI_fascism:1 "Imperial Helvetia"
  LUX:0 "Luxembourg"
  LUX_DEF:0 "Luxembourg"
  LUX_ADJ:0 "Luxembourg"
+ GEN_fascism: "Volksdeutsche Luxembourg"
+ GEN_fascism_DEF: "Volksdeutsche Luxembourg"
+ GEN_democratic:0 "Luxembourg"
+ GEN_democratic_DEF:0 "Luxembourg"
+ GEN_neutrality: "Genoa-Savoy"
+ GEN_neutrality_DEF: "Genoa-Savoy"
+ GEN_communism: "Independent Luxembourg Commune"
+ GEN_communism_DEF: "the Independent Luxembourg Commune"
+ GEN_fascism_ADJ:0 "Luxembourg"
+ GEN_democratic_ADJ:0 "Luxembourg"
+ GEN_neutrality_ADJ:0 "Genoa-Savoy"
+ GEN_communism_ADJ:0 "Luxembourg"
+ GEN:0 "Genoa-Savoy"
+ GEN_DEF:0 "Genoa-Savoy"
+ GEN_ADJ:0 "Genoa-Savoy"
  BEL_fascism:0 "Rexist Belgium"
  BEL_fascism_DEF:0 "Rexist Belgium"
  BEL_democratic:0 "Belgium"
@@ -293,8 +308,8 @@ SWI_fascism:1 "Imperial Helvetia"
  AUS_fascism_DEF: "the Federal State of Austria"
  AUS_democratic:0 "Republic of Austria"
  AUS_democratic_DEF:0 "the Republic of Austria"
- AUS_neutrality:0 "Austria" 
- AUS_neutrality_DEF: "the Federal State of Austria"
+ AUS_neutrality:0 "Holy Roman Empire" 
+ AUS_neutrality_DEF: "the Holy Roman Empire"
  AUS_communism:0 "Socialist Republic of Austria" 
  AUS_communism_DEF:0 "the Socialist Republic of Austria" 
  AUS_stalinism: "Austrian Soviet Republic" #to signify change to full soviet politics rather than a little soviet politics
